ironic (1:6.0.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Added new pt_BR.po Brazilian Portuguese debconf templates translation
    (Closes: #829340).
  * Rebase allow-any-pytz-version.patch. Add allow-any-fixtures-version.patch.

 -- Thomas Goirand <zigo@debian.org>  Wed, 29 Jun 2016 22:44:18 +0200

ironic (1:5.1.2-2) unstable; urgency=medium

  * Using upstream config generator shell script to generate ironic.conf,
    instead of using (broken) sample file. (Closes: #828897)

 -- Thomas Goirand <zigo@debian.org>  Wed, 29 Jun 2016 20:28:00 +0000

ironic (1:5.1.2-1) unstable; urgency=high

  * New upstream release:
    - addresses CVE-2016-4985: Node information including credentials exposed
      to unathenticated users. Includes upstream patch: Mask password on agent
      lookup according to policy (Closes: #827886).

 -- Thomas Goirand <zigo@debian.org>  Wed, 22 Jun 2016 10:05:13 +0200

ironic (1:5.1.1-1) unstable; urgency=medium

  * Team upload.
  * New upstream release

 -- Ondřej Nový <onovy@debian.org>  Tue, 21 Jun 2016 00:37:13 +0200

ironic (1:5.1.0-2) unstable; urgency=medium

  * Standards-Version is 3.9.8 now (no change)
  * Allow sudo for ironic-rootwrap
    (Thanks to Jan Sára for providing fix)
  * Fixed d/watch to ignore old year-based versioning schema

 -- Ondřej Nový <novy@ondrej.org>  Fri, 27 May 2016 11:37:10 +0000

ironic (1:5.1.0-1) unstable; urgency=medium

  * New upstream release.
  * Uploading to unstable.
  * Removed debian/patches/Fix_sphinx_docs_build.patch applied upstream.

 -- Thomas Goirand <zigo@debian.org>  Tue, 05 Apr 2016 14:05:32 +0000

ironic (1:5.0.0-2) experimental; urgency=medium

  * Do not use the Keystone admin auth token to register API endpoints.

 -- Thomas Goirand <zigo@debian.org>  Tue, 29 Mar 2016 13:36:22 +0000

ironic (1:5.0.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.